# TestYadro2

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp  metrics.cpp  metrics.hpp
backend/static/: app.js  app.js.map  index.html  styles.css
frontend/: build.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/: api.ts  main.ts  metrics.ts  renderer.ts
